# swarm_simulation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  play_latest.yaml  rl_boundary.yaml  rl_run.yaml  self_play.yaml  swarm_large.yaml  swarm_small.yaml
scripts/: plot_results.py  run_sim.py  run_sweep.sh  train_bc.py  train_rl.py  train_self_play.py
swarm/: __init__.py
swarm/comms/: __init__.py  messages.py  network.py
swarm/core/: __init__.py  agent.py  enemy.py  env.py  metrics.py  simulator.py  state.py
swarm/policies/: __init__.py  base.py  nn_mlp.py  rules_boirds.py  tinyml_mlp.py
swarm/tasks/: __init__.py  base.py  coverage.py  target_tracking.py
swarm/training/: __init__.py  dataset.py  rl_train.py
swarm/viz/: __init__.py  logger.py  render_2d.py
